<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/fm_profile_pic_main"
    tools:context="com.attebion.api.alapuerta.fragments.UpdateProfilePicFragment">


    <LinearLayout
        android:id="@+id/layout_crop_image_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.isseiaoki.simplecropview.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            custom:scv_background_color="@color/windowBackground"
            custom:scv_crop_mode="fit_image"
            custom:scv_frame_color="@color/colorAccent"
            custom:scv_frame_stroke_weight="1dp"
            custom:scv_guide_color="@color/colorAccent"
            custom:scv_guide_show_mode="show_always"
            custom:scv_guide_stroke_weight="1dp"
            custom:scv_handle_color="@color/colorAccent"
            custom:scv_handle_show_mode="show_always"
            custom:scv_handle_size="14dp"
            custom:scv_min_frame_size="50dp"
            custom:scv_overlay_color="@color/overlay"
            custom:scv_touch_padding="8dp"
            android:src="@drawable/mexicobandera"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/divider" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:src="@drawable/ic_back_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonRotateLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="16dp"
                    android:src="@drawable/ic_rotate_left_black_24dp" />

                <ImageButton
                    android:id="@+id/buttonRotateRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="16dp"
                    android:src="@drawable/ic_rotate_right_black_24dp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:src="@drawable/ic_done_black_24dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_profile_pic_root">


        <include layout="@layout/app_logo" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/profile_pic_update_ui_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="268dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_weight="0.22"


            app:civ_border_color="#EEEEEE"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#8BC34A"
            app:civ_shadow_radius="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/btn_profile_pic_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"

                android:layout_weight="1"

                android:text="@string/profile_pic_update_btn_skip"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorError="@color/red_error"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="@string/action_btn_complete"
                custom:pb_textError="@string/action_btn_fail"
                custom:pb_textProgress="@string/action_btn_progress" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/btn_profile_pic_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="1"
                android:text="@string/porfile_pic_update_btn_update"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorError="@color/red_error"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="@string/action_btn_complete"
                custom:pb_textError="@string/action_btn_fail"
                custom:pb_textProgress="@string/action_btn_progress" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>

